# Kampad

./: README.md  Todo.gokturk
app/: main.c
include/: buffer.h  files.h  flags.h  input.h  keymapping.h  new_file.h  rows.h  terminal.h
src/: buffer.c  files.c  flags.c  input.c  keymapping.c  new_file.c  rows.c  terminal.c
test/: gui_nav  gui_nav.c
test/tui/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  keymap.gokturk  tui  tui.c
